@@ -7,7 +7,7 @@ ACIT 4850 Winter 2016
 <!-- The root element, which should contain: day of the week, class period, and course.
 The data generated here comes from ACIT Winter 2016 Timetable.
 -->
-<!ELEMENT schedule (day, period, course)+>
+<!ELEMENT schedule (day, period, course)>
 
 <!-- DAY PERSPECTIVE -->
 <!-- Each day element contains a specific day of the week (excluding weekend).
@@ -28,7 +28,7 @@ courseName  - name of the scheduled course at that time slot,
 room        - where the scheduled course will be held, and
 instructor  - who teaches the scheduled course
 -->
-<!ELEMENT dBooking (timeStart, timeEnd, courseName, room, instructor)*>
+<!ELEMENT dBooking (timeStart, timeEnd, courseName, room, instructor)>
 
 <!-- PERIOD PERSPECTIVE -->
 <!-- Each period element contains a timeslot available for course scheduling
@@ -50,7 +50,7 @@ courseName  - name of the scheduled course at that weekday slot,
 room        - where the scheduled course will be held, and
 instructor  - who teaches the scheduled course
 -->
-<!ELEMENT pBooking (daySlot, courseName, room, instructor)*>
+<!ELEMENT pBooking (daySlot, courseName, room, instructor)>
 
 <!-- COURSE PERSPECTIVE -->
 <!-- Each course element contains a course available in the term
@@ -74,16 +74,16 @@ daySlot     - weekday slot,
 room        - where the scheduled course will be held, and
 instructor  - who teaches the scheduled course
 -->
-<!ELEMENT cBooking (daySlot, timeStart, timeEnd, room, instructor)*>
+<!ELEMENT cBooking (daySlot, timeStart, timeEnd, room, instructor)>
 <!-- type refers to course type -->
 <!ATTLIST cBooking
     type (Lab|Lecture|Tutorial) #REQUIRED
 >
 
 <!-- Elements containing no children -->
-<!ELEMENT timeStart (#PCDATA)*>
-<!ELEMENT timeEnd (#PCDATA)*>
-<!ELEMENT daySlot (#PCDATA)*>
-<!ELEMENT courseName (#PCDATA)*>
-<!ELEMENT room (#PCDATA)*>
-<!ELEMENT instructor (#PCDATA)*>
+<!ELEMENT timeStart (#PCDATA)>
+<!ELEMENT timeEnd (#PCDATA)>
+<!ELEMENT daySlot (#PCDATA)>
+<!ELEMENT courseName (#PCDATA)>
+<!ELEMENT room (#PCDATA)>
+<!ELEMENT instructor (#PCDATA)>
